--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -11,6 +11,7 @@
     <td><%= picture.title %></td>
     <td><%= picture.content %></td>
     <td><%= image_tag picture.image_pict.to_s %></td>
+    <td><%= link_to '詳細を確認する', picture_path(picture.id) %></td>
   </tr>
 <% end %>
 </table>
