--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -13,6 +13,7 @@
     <td><%= image_tag picture.image_pict.to_s %></td>
     <td><%= link_to '詳細を見る', picture_path(picture.id) %></td>
     <td><%= link_to "編集する", edit_picture_path(picture.id) %></td>
+    <td><%= link_to 'ブログを削除する', picture_path(picture.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %> %></td>
   </tr>
 <% end %>
 </table>
