CarrieWave確認画面実装

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Picture一覧</h1>
-
+<p><%= notice %></p>
 <table>
   <tr>
     <th>タイトル</th>
@@ -13,7 +13,7 @@
     <td><%= image_tag picture.image_pict.to_s %></td>
     <td><%= link_to '詳細を見る', picture_path(picture.id) %></td>
     <td><%= link_to "編集する", edit_picture_path(picture.id) %></td>
-    <td><%= link_to 'ブログを削除する', picture_path(picture.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %> %></td>
+    <td><%= link_to 'ブログを削除する', picture_path(picture.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
   </tr>
 <% end %>
 </table>
