--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,15 +1,2 @@
-<%= form_with(model: @picture, local: true) do |form| %>
-  <div class="picture_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-  <div class="picture_title">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <div class="picture_title">
-    <%= form.label :picture %>
-    <%= form.file_field :image_pict %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<h1>picture投稿</h1>
+<%= render 'form' %>
