--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
-<h1><%= @user.name %>のページ</h1>
-
-<p>メールアドレス: <%= @user.email %></p>
+<h1>user詳細画面</h1>
+<p>タイトル: <%= @user.name %></p>
+<p>内容: <%= @user.email %></p>
+<%= image_tag @user.image_user.to_s %>
