--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,15 +1,17 @@
-<%= form_with(model: @picture, local: true ,url: choose_new_or_edit) do |form| %>
-  <div class="picture_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-  <div class="picture_title">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <div class="picture_title">
-    <%= form.label :picture %>
-    <%= form.file_field :image_pict %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<div class="picture-new-wrap">
+  <%= form_with(model: @picture, local: true ,url: choose_new_or_edit) do |form| %>
+    <div class="picture_title">
+      <%= form.label :title %>
+      <%= form.text_field :title %>
+    </div>
+    <div class="picture_title">
+      <%= form.label :content %>
+      <%= form.text_field :content %>
+    </div>
+    <div class="picture_title">
+      <%= form.label :picture %>
+      <%= form.file_field :image_pict %>
+    </div>
+    <%= form.submit %>
+  <% end %>
+</div>
