--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,12 +1,14 @@
-<h1>picture詳細画面</h1>
-<p>タイトル: <%= @picture.title %></p>
-<p>内容: <%= @picture.content %></p>
-<%= image_tag @picture.image_pict.to_s %>
+<div class="picture-show-wrap">
+  <h1>picture詳細画面</h1>
+  <p>タイトル: <%= @picture.title %></p>
+  <p>内容: <%= @picture.content %></p>
+  <%= image_tag @picture.image_pict.to_s %>
 
-<% unless @picture.user_id == current_user.id %>
-  <% if @favorite.present? %>
-    <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
-  <% else %>
-    <%= link_to 'お気に入りする', favorites_path(picture_id: @picture.id), method: :post, class: 'btn btn-primary' %>
+  <% unless @picture.user_id == current_user.id %>
+    <% if @favorite.present? %>
+      <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+    <% else %>
+      <%= link_to 'お気に入りする', favorites_path(picture_id: @picture.id), method: :post, class: 'btn btn-primary' %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
