--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @user, local: true ,url: choose_new_or_edit) do |form| %>
+<%= form_with(model: @user, local: true ,url: user_path) do |form| %>
   <div class="picture_title">
     <%= form.label :name %>
     <%= form.text_field :name %>
